# VoidDriftBinary

./: .gitignore  CLAUDE.md  PROGRESS.md  README.md  project.json
.github/workflows/: build.yml
src/: index.html
src-tauri/: Cargo.toml  index.html  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
